# dll-universal-patcher

./: .gitmodules  CMakeLists.txt  README.md  patches.schema.json
src/: library.cpp
